# easy-di

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.md  pyproject.toml
examples/easy_di_app/: __init__.py  __main__.py  app.py  unit_test.py
examples/easy_di_sigle_file/: __init__.py
src/easy_di/: __init__.py  di_storage.py  exceptions.py  injection.py  loaders_patching.py  main.py  resource_locator.py
test/easy_di_test/: constructor_wrapper_test.py  di_test.py  resources.py  resources_2.py  resources_3.py  resources_4.py  resources_5.py
test/easy_di_test/benchmarks/: bench.py  resources.py  test_performances_hit.py  test_vs_global_dict.py
