[project]
name = "easy-dependency-injection"
version = "0.2.0"
description = "Easy to use Dependency Injection Library"
authors = [{ name = "Iacopo Papalini", email = "iacopo@domotz.com" }]
license = {text = "MIT\nCopyright Domotz Inc."}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["dependency-injection", "inversion-of-control", "di"]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.urls]
homepage = "https://github.com/domotz/easy-di"
repository = "https://github.com/domotz/easy-di"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
dev = ["bandit", "black", "bumpver", "isort", "pytest"]


[tool.bumpver]
current_version = "0.2.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^current_version = "{version}"$',
    '^version = "{version}"$'
]
"src/easy_di/__init__.py" = ['^__version__ = "{version}"$']

